wp_derive/tests/error_wp_contextual_field_without_wp_context.stderr
error: #[WPContextualField] doesn't have any contexts. Did you forget to add #[WPContext] attribute?
 --> tests/error_wp_contextual_field_without_wp_context.rs:7:5
  |
7 |     #[WPContextualField]
  |     ^
